--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ImageUpload</string>
+    <string name="yes">sim</string>
+    <string name="no">não</string>
 </resources>
